--- a/src/index.css
+++ b/src/index.css
@@ -143,9 +143,13 @@
     padding: 0;
     overflow: hidden;
   }
+  html, body {
+    height: 100%;
+    width: 100%;
+  }
   #root {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
   }
 }
 
